sql/sql_insert.h
@@ -43,7 +43,7 @@ int check_duplic_insert_without_overlaps(THD *thd, TABLE *table,
 int write_record(THD *thd, TABLE *table, COPY_INFO *info,
                  select_result *returning= NULL);
 void kill_delayed_threads(void);
-bool binlog_create_table(THD *thd, TABLE *table);
+bool binlog_create_table(THD *thd, TABLE *table, bool replace);
 bool binlog_drop_table(THD *thd, TABLE *table);
 
 #ifdef EMBEDDED_LIBRARY
